# grep

./: .cvsignore  .gitignore  .x-sc_avoid_if_before_free  .x-sc_bindtextdomain  .x-sc_cast_of_argument_to_free  .x-sc_cast_of_x_alloc_return_value  .x-sc_prohibit_tab_based_indentation  .x-sc_prohibit_xalloc_without_use  .x-sc_require_config_h  .x-sc_require_config_h_first  .x-sc_space_tab  AUTHORS  ChangeLog  ChangeLog-2009  HACKING  Makefile.am  Makefile.boot  Makefile.cvs  Makefile.in  NEWS  PATCHES-AC  PATCHES-AM  README  README-alpha  README-boot  README-hacking  README-prereq  README-release  README.DOS  THANKS  THANKS.in  TODO  acconfig.h  aclocal.m4  autogen.sh  bootstrap  bootstrap.conf  cfg.mk  config.h.in  configure  (+5 more)
bootstrap/: Makefile.am  Makefile.try  README
build-aux/: .gitignore  git-log-fix
djgpp/: Makefile.am  README  config.bat  config.sed
doc/: .cvsignore  .gitignore  Makefile.am  fdl.texi  grep.1  grep.in.1  grep.texi  version.texi
gl/lib/: regcomp.c.diff  regex_internal.c.diff  regexec.c.diff
gnulib-tests/: Makefile.am
intl/: Makefile  Makefile.in  bindtextdom.c  config.charset  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural.h  explodename.c  finddomain.c  gettext.c  gettextP.h  gmo.h  hash-string.h  intl-compat.c  l10nflist.c  libgnuintl.h  libintl.glibc  loadinfo.h  loadmsgcat.c  localcharset.c  localealias.c  localename.c  ngettext.c  os2compat.c  os2compat.h  osdep.c  plural-exp.c  plural-exp.h  plural.c  ref-add.sin  ref-del.sin  textdomain.c
lib/: .gitignore  Makefile.am  closeout.c  colorize-impl.c  colorize-posix.c  colorize-w32.c  colorize.c  colorize.h  error.c  error.h  exclude.c  exclude.h  fnmatch.c  fnmatch.h  getopt.c  getopt.h  getopt1.c  hard-locale.c  isdir.c  malloc.c  memchr.c  quotearg.c  quotearg.h  realloc.c  regex.c  regex.h  savedir.c  savedir.h  stpcpy.c  strtol.c  strtoul.c  strtoull.c  strtoumax.c  xalloc.h  xmalloc.c  xstrtol.c  xstrtoumax.c
lib/ms/: colorize-impl.c  colorize.h
lib/posix/: Makefile.am  regex.h
m4/: .gitignore  Makefile.am  codeset.m4  cygwin.m4  decl.m4  djgpp.m4  dosfile.m4  envsep.m4  error.m4  gettext.m4  glibc.m4  header.m4  iconv.m4  init.m4  largefile.m4  lcmessage.m4  malloc.m4  mingw32.m4  pcre.m4  progtest.m4  realloc.m4  regex.m4  uintmax_t.m4  xstrtoumax.m4
po/: .cvsignore  .gitignore  Makefile.in.in  Makevars  POTFILES.in  af.po  be.po  bg.po  ca.po  cat-id-tbl.c  cs.po  da.po  de.gmo  de.po  el.gmo  el.po  eo.po  es.gmo  es.po  et.po  eu.po  fi.po  fr.gmo  fr.po  ga.po  gl.po  grep.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  nb.po  nl.po  no.gmo  no.po  pl.gmo  (+16 more)
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  dfa.c  dfa.h  dfasearch.c  die.h  dosbuf.c  egrep.sh  esearch.c  fsearch.c  getpagesize.h  grep.1  grep.c  grep.h  gsearch.c  kwsearch.c  kwset.c  kwset.h  localeinfo.c  localeinfo.h  main.c  mbsupport.h  pcresearch.c  pgrepmat.c  regex.c  savedir.c  savedir.h  search.c  search.h  searchutils.c  system.h  vms_fab.c  vms_fab.h
src/posix/: Makefile.am
tests/: .cvsignore  .gitignore  Coreutils.pm  CuSkip.pm  CuTmpdir.pm  Makefile.am  Makefile.in  backref  backref-alt  backref-multibyte-slow  backref-word  backref.sh  backslash-dot  backslash-s-and-repetition-operators  backslash-s-vs-invalid-multibyte  backslash-s-vs-invalid-multitype  big-hole  big-match  binary-file-matches  bre  bre.awk  bre.sh  bre.tests  c-locale  case-fold-backref  case-fold-backslash-w  case-fold-char-class  case-fold-char-range  case-fold-char-type  case-fold-titlecase  char-class-multibyte  char-class-multibyte2  count-newline  dfa-coverage  dfa-heap-overrun  dfa-invalid-utf8  dfa-match  dfa-match-aux.c  dfaexec-multibyte  empty  (+117 more)
vms/: Makefile.am  README  config_vms.h  make.com
