## Process this file with automake to create Makefile.in
AUTOMAKE_OPTIONS = no-dependencies

ACLOCAL_AMFLAGS = --acdir=m4

EXTRA_DIST = gettext.m4 \
             header.m4 \
             init.m4 \
             install.m4 \
             lcmessage.m4 \
             lfs.m4 \
             missing.m4 \
             progtest.m4 \
             sanity.m4
